[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 284.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeLabel" type="RichTextLabel" parent="VBoxContainer2"]
margin_right = 120.0
margin_bottom = 60.0
text = "Welcome to Fe-eze's Chess
Version 0.1 (16-FEB-2022)"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 64.0
margin_right = 120.0
margin_bottom = 228.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_right = 120.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Continue"

[node name="NewGameButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 44.0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 120.0
margin_bottom = 68.0
text = "Load Game"

[node name="LearnChessButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 72.0
margin_right = 120.0
margin_bottom = 92.0
text = "Learn Chess"

[node name="OptionsButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 96.0
margin_right = 120.0
margin_bottom = 116.0
text = "Options"

[node name="CreditsButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 120.0
margin_bottom = 140.0
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 144.0
margin_right = 120.0
margin_bottom = 164.0
focus_neighbour_bottom = NodePath("../ContinueButton")
text = "Quit"

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/LearnChessButton" to="." method="_on_LearnChessButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
